# SmartCut

./: .gitignore  README.md
.github/workflows/: ci.yml
docs/: AGENTS.md
docs/superpowers/plans/: 2026-05-19-smartcut-harness-setup.md
docs/superpowers/specs/: 2026-05-19-smartcut-harness-setup-design.md  2026-05-20-smartcut-tauri-migration-design.md
smartcut-engine/: pyproject.toml
smartcut-engine/src/smartcut/: __init__.py  main.py
smartcut-engine/src/smartcut/api/: __init__.py  router.py  schemas.py
smartcut-engine/src/smartcut/services/: __init__.py  ai_client.py  analyzer.py  editor.py  transcriber.py
smartcut-engine/tests/: __init__.py  test_health.py  test_services.py
smartcut-gui/: checkstyle.xml  pom.xml
smartcut-gui/src/main/java/com/smartcut/: SmartCutApp.java
smartcut-gui/src/main/java/com/smartcut/model/: Project.java  VideoTask.java  package-info.java
smartcut-gui/src/main/java/com/smartcut/model/dto/: EngineRequest.java  EngineResponse.java
smartcut-gui/src/main/java/com/smartcut/service/: EngineClient.java  package-info.java
smartcut-gui/src/main/java/com/smartcut/ui/: MainWindow.java  package-info.java
smartcut-gui/src/test/java/com/smartcut/: ArchitectureTest.java
smartcut-gui/src/test/java/com/smartcut/service/: EngineClientTest.java
