[tool.poetry]
name = "smartcut-engine"
version = "0.1.0"
description = "SmartCut video processing engine"
authors = ["hyuans <2472613445@qq.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { version = "^0.32", extras = ["standard"] }
httpx = "^0.28"
moviepy = "^2.0"
ffmpeg-python = "^0.2"
openai-whisper = "^20240930"
pydantic = "^2.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-cov = "^6.0"
ruff = "^0.8"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert statements in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/smartcut"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.mypy]
strict = true
ignore_missing_imports = true
exclude = ["tests/"]
